stylesheet.css
/* ... */
/* two-column view */
@media (max-width: 1300px) {
    :root.responsive {
        height: auto;
        min-height: 100%;
        overflow: initial;
        contain: none;
    }
    .responsive {
        & body {
            overflow: initial;
            grid:
                "header" max-content
                "main" minmax(max-content, 1fr)
                / 100%
                ;
        }

        & #timeInfo {
            grid-area: header;
        }

        & #commandDeck {
            grid:
                "time" 10px
                "run" auto
                "resources" auto
                "menu" auto
                / 100%;
            gap: 2px;
        }

        & #runStatusDeck {
            grid-template-columns: 1fr;
            gap: 2px;
        }

        & .runVitalsGrid {
            display: flex;
            flex-wrap: nowrap;
            overflow-x: auto;
            gap: 4px;
            max-height: none;
        }

        & .runVitalsSummary {
            display: flex;
            flex-wrap: nowrap;
            overflow-x: auto;
            gap: 2px;
        }

        & .runVitalsLead {
            display: none;
        }

        & #menu {
            justify-content: flex-start;
            overflow-x: auto;
            padding-bottom: 2px;
        }

        & #menu > li {
            flex: 0 0 auto;
        }
    
        /* Main content area */
    
        & main {
            grid-area: main;
            display: grid;
            height: 100%;
            grid:
                "actions town" minmax(600px, max-content)
                "stats log"
                / minmax(min-content,3fr) minmax(min-content,2fr);
            margin-right:0.5em;
        }
        
        & #townColumn {
            display: contents;
        }

        & #statsColumn, & #actionsColumn, & #shortTownColumn, & #actionLogContainer {
            overflow: initial;
        }

        & #statsWindow {
            grid:
                "title skills" 1lh
                "selector skills" 1lh
                "stats skills"
                "buffs skills"
                / minmax(min-content, 3fr) minmax(max-content, 2fr);
            width: 100% !important;
            box-sizing: border-box;
            margin: 0 !important;
            padding: 0 1em;
            align-items: start;
            justify-items: stretch;
            justify-content: stretch;
        }
        & #skillList,
        & #buffList {
            display: flex;
            flex-direction: column;
            width: auto !important;
        }
    
        & #actionsColumn {
            grid-area: actions;
            margin: 0 1em;
            overflow: hidden;
            contain: size;
        }
    
        & #actionList {
            display: flex;
            flex-direction: column;
            height: 100%;
        }
        & #actionList > *:not(.showthat, #plannerHeader, #expandableList) {
            display: none;
        }
        
        & #shortTownColumn {
            display: block;
            grid-area: town;
        }
        
        & #townWindow {
            margin-bottom: 0;
        }
    
        & #townWindow > div.showthat {
            margin: 0 20px;
        }
    
        & #townWindow > div.showthat {
            display: flex;
            justify-content: center;
        }
    
        & #townInfos, & #townActions {
            display: flex;
            align-items: start;
            overflow: clip visible;
        }
    
        & #townInfos > *, & #townActions > * {
            flex: 0 0 100%;
        }
    
        & #actionsTitle {
            margin: 0;
        }
        & .actionOptions {
            min-height:auto;
        }
        & .actionStories {
            min-height:auto;
        }
    
        & .townStatContainer, & .townInfoContainer {
            margin-right: 1em;
            padding: 0;
            width: auto;
            display: block;
        }
        & .townContainer .townLabel,
        & .townContainer .thinProgressBarUpper,
        & .townContainer .thinProgressBarLower,
        & .townContainer .multipartBars {
            margin: 0;
        }
        & .townContainer .flexMargin {
            display: none;
        }
        & #curActionsListContainer, & #nextActionsListContainer {
            display: flex;
            flex-direction: column;
        }
    
        & #curActionsList, & #nextActionsList {
            padding-bottom: 2ex;
            max-height: none !important;
            width: auto;
            display: flex !important;
            flex-direction: column;
            flex: 1;
        }
    
        & #nextActionsList[style*="none"] {
            visibility: collapse;
        }
    
        & #curActionsManaUsed, & #nextActionsAmountButtons {
            position: static;
            width: auto;
            margin-top: auto;
        }
    
        & .curActionContainer, & .nextActionContainer {
            width: auto;
        }
    
        & .nextActionButtons {
            margin-right: 10px;
        }
    
    
        & #expandableList {
            flex: 1 1 auto;
            display: flex;
            min-height: 260px;
            height: var(--action-list-height) !important;
        }
    
        & .actionOptions {
            min-height: none;
        }
    
        & #trackedResources {
            margin-bottom: 0;
        }
        
        & #actionLogContainer {
            display: flex;
            flex-direction: column;
            grid-area: log;
            height: 100%;
        }
    
        & #actionLog {
            margin-right:1em;
            max-height: none;
            flex-grow: 1;
            contain: size;
        }
        
        & .actionLogEntry {
            margin-left: 1em;
        }
    }
}
/* ... */

